--- a/Tests/SIMD Algorithms.Tests.asmdef
+++ b/Tests/SIMD Algorithms.Tests.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:d8b63aba1907145bea998dd612889d6b",
-        "GUID:d50ece07c79e130468159793c9848a2b"
+        "GUID:d50ece07c79e130468159793c9848a2b",
+        "GUID:2665a8d13d1b3f18800f46e256720795"
     ],
     "includePlatforms": [
         "Editor"
