--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simd_algorithms",
+  "name": "com.mrunbelievable.simd_algorithms",
   "displayName": "SIMD Algorithms",
   "version": "1.2.0",
   "unity": "2021.3",
@@ -8,8 +8,8 @@
     "Unity"
   ],
   "dependencies": {
-    "csharpdevtools": "1.0.10",
-    "maxmath": "2.9.9",
+    "com.mrunbelievable.csharpdevtools": "1.0.10",
+    "com.mrunbelievable.maxmath": "2.9.9",
     "com.unity.burst": "1.8.26",
     "com.unity.mathematics": "1.3.1",
     "com.unity.collections": "0.14.0-preview.16"
