--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "simd_algorithms",
+  "name": "com.mrunbelievable.simd_algorithms",
   "displayName": "SIMD Algorithms",
   "version": "1.2.0",
   "unity": "2021.3",
@@ -8,8 +8,8 @@
     "Unity"
   ],
   "dependencies": {
-    "csharpdevtools": "1.0.10": "https://github.com/MrUnbelievable92/C-Sharp-Dev-Tools.git",
-    "maxmath": "2.9.9": "https://github.com/MrUnbelievable92/MaxMath.git",
+    "com.mrunbelievable.csharpdevtools": "1.0.10": "https://github.com/MrUnbelievable92/C-Sharp-Dev-Tools.git",
+    "com.mrunbelievable.maxmath": "2.9.9": "https://github.com/MrUnbelievable92/MaxMath.git",
     "com.unity.burst": "1.8.26",
     "com.unity.mathematics": "1.3.1",
 	"com.unity.collections": "0.14.0-preview.16"
